--- a/views/categories/main_categories.ejs
+++ b/views/categories/main_categories.ejs
@@ -20,7 +20,7 @@
         <div class="col-12">
           <div class="card">
             <div class="card-header">
-              <h3 class="card-title">DataTable with default features</h3>
+              <%-buttonAddData%>
             </div>
             <!-- /.card-header -->
             <div class="card-body">
@@ -31,7 +31,7 @@
                   <th>Browser</th>
                   <th>Platform(s)</th>
                   <th>Engine version</th>
-                  <th>CSS grade</th>
+                  <th>Action</th>
                 </tr>
                 </thead>
                 <tbody>
@@ -42,8 +42,12 @@
                   </td>
                   <td>Win 95+</td>
                   <td> 4</td>
-                  <td>X</td>
-                </tr>         
+                  <td>
+                    <a href="#" class="btn btn-success btn-sm">Edit</a>
+                    <a href="#" class="btn btn-danger btn-sm">Delete</a>
+                  </td>
+                </tr>
+                
                 </tbody>
                 <tfoot>
                 <tr>
