--- a/views/index.ejs
+++ b/views/index.ejs
@@ -33,11 +33,11 @@
             </button>
           </div>
           <div class="modal-body">
-            <p>Are you sure to delete this item ?</p>
+            <p>Are you sure to delete this item <b id="kq_popup_name"></b> ?</p>
           </div>
           <div class="modal-footer justify-content-between">
             <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-            <button type="button" class="btn btn-danger"> <i class="fas fa-trash"></i>  Delete</button>
+            <button type="button" class="btn btn-danger" id="add_atribute_delete"> <i class="fas fa-trash"></i>  Delete</button>
           </div>
         </div>
         <!-- /.modal-content -->
